# arch-release-promotion

./: .gitignore  .gitlab-ci.yml  README.md  README.rst  pyproject.toml  tox.ini
arch_release_promotion/: argparse.py  cli.py  config.py  files.py  gitlab.py  release.py  signature.py  torrent.py
examples/: example.toml  projects.toml
examples/systemd/: arch-release-sync.service  arch-release-sync.timer
examples/sysusers.d/: arch-release-promotion.conf
tests/: test_argparse.py  test_config.py  test_files.py  test_gitlab.py  test_release.py  test_signature.py  test_torrent.py
