[tool.poetry]
name = "arch-release-promotion"
version = "0.1.1"
description = "Promote official Arch Linux releases"
authors = ["David Runge <dvzrv@archlinux.org>"]
license = "GPL-3.0-or-later"
packages = [
  {include = 'arch_release_promotion'}
]
include = [
  {path = 'tests/*', format = 'sdist'},
  {path = 'examples/*', format = 'sdist'},
]
readme = "README.rst"
homepage = "https://gitlab.archlinux.org/archlinux/arch-release-promotion"
repository = "https://gitlab.archlinux.org/archlinux/arch-release-promotion"
documentation = "https://gitlab.archlinux.org/archlinux/arch-release-promotion/-/blob/master/README.rst"
keywords = ["arch linux", "releases", "pgp", "signature", "torrent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development",
  "Topic :: System :: Operating System",
  "Topic :: Utilities",
]

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.archlinux.org/archlinux/arch-release-promotion/-/issues/"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"
pyxdg = "^0.27"
email-validator = "^1.1.3"
torrentool = "^1.1.1"
python-gitlab = "^2.10.0"
orjson = "^3.6.1"
prometheus-client = "^0.11.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.8.0"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"
coverage = "^5.5"

[tool.poetry.scripts]
arch-release-promotion = "arch_release_promotion.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
  \.direnv|
  |\.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |\.svn
  |_build
  |buck-out
  |db-write
  |db2json
  |dbscripts
  |build
  |dist
)/
'''

[tool.coverage.path]
source = "arch_release_promotion"

[tool.coverage.report]
omit = ["tests/*", ".tox/*"]
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest -v tests/ -m 'not integration'"
omit = ["tests/*", ".tox/*"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
follow_imports_for_stubs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
warn_unreachable = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
